Also verify stateAfter on MonitorEnterNode
(cherry picked from commit 1fa877e0cc5a63695ee53c10f43c0a0f261e706a)